# gecko_sdk

./: CMakelists.txt
platform/: CMakeLists.txt
platform/CMSIS/Core/: CMakeLists.txt
platform/Device/: CMakeLists.txt
platform/Device/SiliconLabs/: CMakeLists.txt
platform/common/: CMakeLists.txt
platform/emdrv/: CMakeLists.txt  CMakelists.txt
platform/emdrv/common/: CMakeLists.txt
platform/emdrv/gpiointerrupt/: CMakeLists.txt
platform/emdrv/tempdrv/: CMakeLists.txt
platform/emlib/: CMakeLists.txt
platform/emlib/inc/: em_gpio.h  em_msc.h
platform/emlib/src/: em_cmu.c  em_dbg.c  em_eusart.c  em_gpcrc.c  em_gpio.c  em_ldma.c  em_msc.c  em_prs.c  em_system.c
